Post status can now be specified using the status: tag.
Post status setting was renamed to Default Post Status and moved to the Message tab.

= 1.4.10 =
All script, style and body tags are stripped from html emails.

= 1.4.6 =
Attachments are now processed in the order they were attached.

== CHANGELOG ==
= 1.6.2 (future) =
* Moved FAQ and Help to PostiePlugin.com

= 1.6.1 (2014.09.19) =
* Allow negative time corrections
* Fix links to settings page
* Misc UI updates

= 1.6.0 (2014.09.18) =
* Updated remote cron url to be more compatible with Wordpress
* The Postie menu has been moved out of the Settings menu to the top level
* Tested with Wordpress 4.0

= 1.5.24 (2014.08.12) =
* Fix attachment renaming bug
* Test with Wordpress 3.9.2

= 1.5.23 (2014.08.11) =
* Remove PEAR/PEAR5 dependency which was causing errors on some systems
* Call wp_handle_upload_prefilter before adding images to WP
* Temporary new post is now draft status

= 1.5.22 (2014.06.10) =
* Fix missing attachments for html messages

= 1.5.21 (2014.06.06) =
* Fixed spelling errors
* Added more debugging around image sizes
* Clarified some image options on settings page
* Removed call to wp_set_post_terms()

= 1.5.20 (2014.05.29) =
* Added logic to prevent appending images when preferred text type is HTML.
* Improved help text on several options and clarified options.
* Additional logging around attachment uploading

= 1.5.19 (2014.04.30) =
* Updated image preview to recognize all variables.
* Updated "wordpress_default" images template to match WP 3.8.
* Clarified logging messages for IMAP/IMAP-SSL/POP3-SSL
* Removed POSTTITLE from templates since we don't know the actual title at template time.
* Verified WordPress 3.9 compatibility

= 1.5.18 (2014.01.12) =
* Reverted text encoding change in 1.5.17.

= 1.5.17 (2013.12.19) =
* Fixed date calculation in test screen.
* Fixed text encoding issues for systems with PHP 5.4
* Updated CSS to better match WordPress 3.8 styles.